2009-09-26  Vladimir Tzankov  <vtzankov@gmail.com>

	* package.d (intern) [MULTITHREAD]: search for symbol before locking
	package (it's faster)

2009-09-25  Aleksej Saushev  <asau@inbox.ru>

	* makemake.in (BUILD_AUX): do not link_dep if building in src to
	avoid cyclic dependency

2009-09-25  Sam Steingold  <sds@gnu.org>

	* makemake.in (HERE): set to "./" on all platforms: it seems to be
	needed on mingw and should not be able to hurt anyway

2009-09-25  Sam Steingold  <sds@gnu.org>

	Do not eliminate function calls which are advertised to have
	exceptional situation in unsafe code.
	* lispbibl.d (seclass_t): add seclass_rd_sig: same as read,
	but is also advertised to have "Exceptional situations" in unsafe code
	(seclass_object): handle it
	* constobj.d (seclass_rd_sig): add
	* control.d (FDEFINITION): seclass_rd_sig
	* io.d (GET-DISPATCH-MACRO-CHARACTER, PARSE-INTEGER): seclass_rd_sig
	* pathname.d (PARSE-NAMESTRING, LOGICAL-PATHNAME, WILD-PATHNAME-P)
	(PATHNAME-MATCH-P, TRUENAME, PROBE-FILE, PROBE-DIRECTORY, DIRECTORY):
	(FILE-WRITE-DATE, FILE-AUTHOR): seclass_rd_sig
	* predtype.d (COERCE): seclass_rd_sig
	* sequence.d (CONCATENATE): seclass_rd_sig
	* subr.d: updated all of the above
	Reported by "Tobias C. Rittweiler" <tcr@freebits.de>

2009-09-25  Vladimir Tzankov  <vtzankov@gmail.com>

	* package.d (intern): fix possible races in MT builds. guard both -
	symtab lookup and insert with package mutex. it was possible to have
	different interned symbols with same print name

2009-09-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (lisp${SHREXT}): only define on with_dynamic_modules
	& woe32 (and cygwin) and add $(LIBS) to libs; depend on ${GLLIB_A}

2009-09-22  Sam Steingold  <sds@gnu.org>

	* modules/regexp/gllib/unistd.in.h, modules/syscalls/gllib/unistd.in.h:
	* gllib/unistd.in.h, src/glm4/link-follow.m4: update from gnulib

2009-09-22  Sam Steingold  <sds@gnu.org>

	* makemake.in (.PHONY): add am--refresh
	(SUBDIRS): teeny code simplification